# munin-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  munin-rs.sln  release-please-config.json
.github/: copilot-instructions.md  dependabot.yml
.github/actions/workspace-version/: action.yml
.github/workflows/: build-extension.yml  ci.yml  codeql.yml  publish-extension.yml  release-please.yml
crates/munin/: CHECKLIST.md  COMPLETED-CHECKLIST.md  Cargo.toml  DESIGN-NOTES.md  README.md
crates/munin-binlog-mcp/: COMPLETED-CHECKLIST.md  Cargo.toml  DESIGN-NOTES.md  README.md
crates/munin-binlog-mcp/extension/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
crates/munin-binlog-mcp/extension/src/: extension.ts
crates/munin-binlog-mcp/src/: lib.rs  main.rs
crates/munin-binlog-mcp/src/tools/: mod.rs  tests.rs
crates/munin-binlog-mcp/tests/: integration.rs
crates/munin/src/: context.rs  error.rs  events.rs  field_flags.rs  fields.rs  header.rs  index.rs  lib.rs  nvl_table.rs  primitives.rs  reader.rs  readers.rs  record_kind.rs  string_table.rs
crates/munin/src/context/: tests.rs
crates/munin/src/events/: tests.rs
crates/munin/src/field_flags/: tests.rs
crates/munin/src/fields/: tests.rs
crates/munin/src/header/: tests.rs
crates/munin/src/index/: tests.rs
crates/munin/src/nvl_table/: tests.rs
crates/munin/src/primitives/: tests.rs
crates/munin/src/reader/: tests.rs
crates/munin/src/readers/: tests.rs
crates/munin/src/record_kind/: tests.rs
crates/munin/src/string_table/: tests.rs
crates/munin/tests/: read_real_binlog.rs
crates/munin/tests/data/: hello.binlog
testprojects/csharp/helloworld/: helloworld.cs  helloworld.csproj
