# Copyright (c) Michael Grier

[workspace]
members = [
    "crates/munin",
    "crates/munin-binlog-mcp",
]
resolver = "2"

[workspace.package]
version       = "0.2.0" # x-release-please-version
authors       = ["Mike Grier"]
edition       = "2021"
rust-version  = "1.85"
license       = "MIT"
repository    = "https://github.com/MikeGrier/munin-rs"
homepage      = "https://github.com/MikeGrier/munin-rs"
documentation = "https://docs.rs/munin"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Release profile: tuned for shipped binary size (bundled inside the VS Code
# extension VSIX).
#
# - `strip = "symbols"` removes debug symbols; typically halves a Rust Windows binary.
# - `lto = "thin"` enables cross-crate inlining/dead-code elimination at link time.
# - `codegen-units = 1` lets LLVM see the whole crate at once for better optimisation.
[profile.release]
strip         = "symbols"
lto           = "thin"
codegen-units = 1
